[cmake/python] work around python bindings error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,9 @@ include(DuneXTInstallPythonPackage)
 # compiled extensions directly usable from the venv
 dune_xt_install_python_package(PATH python)
 include_dependent_binary_python_dirs()
+if (NOT TARGET bindings)
+  add_custom_target(bindings)
+endif (NOT TARGET bindings)
 dxt_add_make_dependent_bindings(dune-xt-common dune-xt-la dune-xt-grid dune-xt-functions)
 
 # do not change order here
