[ci] adjust travis to the drone way of building docker image and using it

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,24 +14,25 @@ dist: trusty
 language: generic
 services: docker
 
-before_script:
-    - export IMAGE="dunecommunity/${MY_MODULE}-testing_base_${DOCKER_TAG}:${TRAVIS_BRANCH}"
+install:
+    - export BASEIMAGE="${MY_MODULE}-testing_base_${CC}:${TRAVIS_BRANCH}"
+    - export IMAGE="${MY_MODULE}-testing_${CC}:${TRAVIS_COMMIT}"
     - ./.travis.add_swap.bash 2000 &
     # get image with fallback to master branch of the super repo
-    - docker pull ${IMAGE} || export IMAGE="dunecommunity/${MY_MODULE}-testing_base_${DOCKER_TAG}:master" ; docker pull ${IMAGE}
-    - docker inspect ${IMAGE}
+    - docker pull dunecommunity/${BASEIMAGE} || export BASEIMAGE="${MY_MODULE}-testing_base_${CC}:master" ; docker pull dunecommunity/${BASEIMAGE}
+    - docker build --build-arg BASE=${BASEIMAGE} -t dunecommunity/${IMAGE} -f .ci/docker/Dockerfile .
     # for add swap
     - wait
     - export ENV_FILE=${HOME}/env
     - python3 ./.travis.make_env_file.py
-    - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/root/src/${MY_MODULE} ${IMAGE}"
+    - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/home/dune-ci/src/${MY_MODULE} ${IMAGE}"
 
 script:
-    - ${DOCKER_RUN} /root/src/${MY_MODULE}/.travis.script.bash
+    - ${DOCKER_RUN} /home/dune-ci/src/${MY_MODULE}/.travis.script.bash
 
 # runs independent of 'script' failure/success
 after_script:
-    - ${DOCKER_RUN} /root/src/${MY_MODULE}/.travis.after_script.bash
+    - ${DOCKER_RUN} /home/dune-ci/src/${MY_MODULE}/.travis.after_script.bash
 
 notifications:
   email:
@@ -59,66 +60,66 @@ jobs:
   include:
 #   gcc 6
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=0
+    env: CC=gcc TESTS=0
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=1
+    env: CC=gcc TESTS=1
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=2
+    env: CC=gcc TESTS=2
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=3
+    env: CC=gcc TESTS=3
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=4
+    env: CC=gcc TESTS=4
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=5
+    env: CC=gcc TESTS=5
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=6
+    env: CC=gcc TESTS=6
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=7
+    env: CC=gcc TESTS=7
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=8
+    env: CC=gcc TESTS=8
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=9
+    env: CC=gcc TESTS=9
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=10
+    env: CC=gcc TESTS=10
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=11
+    env: CC=gcc TESTS=11
   - stage: test_cpp
-    env: DOCKER_TAG=gcc TESTS=12
+    env: CC=gcc TESTS=12
 #   clang 3.9
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=0
+    env: CC=clang TESTS=0
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=1
+    env: CC=clang TESTS=1
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=2
+    env: CC=clang TESTS=2
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=3
+    env: CC=clang TESTS=3
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=4
+    env: CC=clang TESTS=4
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=5
+    env: CC=clang TESTS=5
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=6
+    env: CC=clang TESTS=6
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=7
+    env: CC=clang TESTS=7
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=8
+    env: CC=clang TESTS=8
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=9
+    env: CC=clang TESTS=9
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=10
+    env: CC=clang TESTS=10
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=11
+    env: CC=clang TESTS=11
   - stage: test_cpp
-    env: DOCKER_TAG=clang TESTS=12
+    env: CC=clang TESTS=12
   - stage: test_python
-    env: DOCKER_TAG=gcc
-    script: ${DOCKER_RUN} /root/src/${MY_MODULE}/.travis.test_python.bash
+    env: CC=gcc
+    script: ${DOCKER_RUN} /home/dune-ci/src/${MY_MODULE}/.travis.test_python.bash
     # overwrite other global/matrix settings
     after_script: true
   - stage: test_python
-    env: DOCKER_TAG=clang
-    script: ${DOCKER_RUN} /root/src/${MY_MODULE}/.travis.test_python.bash
+    env: CC=clang
+    script: ${DOCKER_RUN} /home/dune-ci/src/${MY_MODULE}/.travis.test_python.bash
     # overwrite other global/matrix settings
     after_script: true
 
