[ci|travis] debug inspect docker image

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
     - wait
     - export ENV_FILE=${HOME}/env
     - python3 ./.ci/make_env_file.py
+    - docker inspect ${IMAGE}
     - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/home/dune-ci/src/${MY_MODULE} ${IMAGE}"
 
 script:
