[cmake] re-add lost pylicense macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 # ~~~
 # This file is part of the dune-gdt project:
 #   https://github.com/dune-community/dune-gdt
-# Copyright 2010-2018 dune-gdt developers and contributors. All rights reserved.
+# Copyright 2009-2018 dune-gdt developers and contributors. All rights reserved.
 # License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
 #          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
-#   Felix Schindler (2012 - 2017)
-#   Rene Milk       (2014, 2016 - 2018)
+#   Felix Schindler (2012 - 2018)
+#   René Fritze     (2014, 2016 - 2018)
 #   Sven Kaulmann   (2013)
-#   Tobias Leibner  (2016)
+#   Tobias Leibner  (2016, 2018)
 # ~~~
 
 # set up project
@@ -73,6 +73,7 @@ endif()
 add_definitions("-DENABLE_HEADERCHECK=1")
 add_format(${CMAKE_CURRENT_SOURCE_DIR})
 add_tidy(${CMAKE_CURRENT_SOURCE_DIR})
+add_pylicense()
 
 # finalize the dune project, e.g., generate config.h etc.
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
