[ci] work around gitlab's variable expansion limitation

--- a/.ci/gitlab/ci.yml
+++ b/.ci/gitlab/ci.yml
@@ -1,14 +1,7 @@
-
 stages:
   - prepare
   - test
   - cleanup
-
-variables:
-    GCC_IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
-    GCC_IMAGE_HUB: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
-    CLANG_IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
-    CLANG_IMAGE_HUB: dunecommunity/dune-gdt-testing_clang:${CI_COMMIT_SHA}
 
 .docker-in-docker:
     image: docker:stable
@@ -20,7 +13,7 @@ variables:
         - pip3 install jinja2
         - 'export SHARED_PATH="${CI_PROJECT_DIR}/shared"'
         - mkdir -p ${SHARED_PATH}
-        - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
+        - echo "$CI_BUILD_TOKEN" | docker login -u "gitlab-ci-token" --password-stdin  "$CI_REGISTRY"
     services:
         - docker:dind
 
@@ -36,38 +29,39 @@ gcc_image:
     extends: .image
     variables:
       BASE: dune-gdt-testing_base_gcc:master
-      IMAGE: ${GCC_IMAGE}
+      IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
 
 clang_image:
     extends: .image
     variables:
-        BASE: dune-gdt-testing_base_clang:master
-        IMAGE: ${CLANG_IMAGE}
+      BASE: dune-gdt-testing_base_clang:master
+      IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
 
 # ************ TEST EXECUTION ************
 .cpp:
     stage: test
     before_script:
-      - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
+      - echo "$CI_BUILD_TOKEN" | docker login -u "gitlab-ci-token" --password-stdin  "$CI_REGISTRY"
     script: /home/dune-ci/src/dune-gdt/.ci/drone/script.bash
     variables:
       MY_MODULE: dune-gdt
 
 gcc:
     extends: .cpp
-    image: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
+    image: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
 
 clang:
     extends: .cpp
-    image: dunecommunity/dune-gdt-testing_clang:${CI_COMMIT_SHA}
+    image: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
 
 # ************ CLEANUP ************
 .cleanup:
     extends: .docker-in-docker
     stage: cleanup
     variables:
-        REPO_ID: 1
-        API: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/registry/repositories/${REPO_ID}"
+      APIBASE: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/registry/repositories/"
+      GCC_IMAGE_HUB: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
+      CLANG_IMAGE_HUB: dunecommunity/dune-gdt-testing_clang:${CI_COMMIT_SHA}
     before_script:
       - echo $DOCKER_PW | docker login --username="$DOCKER_USER" --password-stdin
 
@@ -80,15 +74,15 @@ success:
 gcc_failure:
     extends: .cleanup
     script:
-      - docker pull ${GCC_IMAGE}
-      - docker tag ${GCC_IMAGE} ${GCC_IMAGE_HUB}
+      - docker pull ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
+      - docker tag ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA} ${GCC_IMAGE_HUB}
       - docker push ${GCC_IMAGE_HUB}
     when: on_failure
 
 clang_failure:
     extends: .cleanup
     script:
-      - docker pull ${CLANG_IMAGE}
-      - docker tag ${CLANG_IMAGE} ${CLANG_IMAGE_HUB}
+      - docker pull ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
+      - docker tag ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA} ${CLANG_IMAGE_HUB}
       - docker push ${CLANG_IMAGE_HUB}
     when: on_failure
