--- a/.ci/gitlab/ci.yml
+++ b/.ci/gitlab/ci.yml
@@ -4,7 +4,8 @@ stages:
   - test
   - cleanup
 
-variables:
+# due to gitlab's limited variable exapsnion we have to realize passing thse via YAML anchors
+.globals: &globalvariables
     GCC_IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
     GCC_IMAGE_HUB: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
     CLANG_IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
@@ -20,7 +21,7 @@ variables:
         - pip3 install jinja2
         - 'export SHARED_PATH="${CI_PROJECT_DIR}/shared"'
         - mkdir -p ${SHARED_PATH}
-        - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
+        - echo "$CI_BUILD_TOKEN" | docker login -u "gitlab-ci-token" --password-stdin  "$CI_REGISTRY"
     services:
         - docker:dind
 
@@ -28,6 +29,8 @@ variables:
 .image:
     extends: .docker-in-docker
     stage: prepare
+    variables:
+      <<: *globalvariables
     script:
       - docker build --build-arg BASE=${BASE} -t ${IMAGE} -f .ci/docker/Dockerfile .
       - docker push ${IMAGE}
@@ -48,18 +51,19 @@ clang_image:
 .cpp:
     stage: test
     before_script:
-      - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
+      - echo "$CI_BUILD_TOKEN" | docker login -u "gitlab-ci-token" --password-stdin  "$CI_REGISTRY"
     script: /home/dune-ci/src/dune-gdt/.ci/drone/script.bash
     variables:
       MY_MODULE: dune-gdt
+      <<: *globalvariables
 
 gcc:
     extends: .cpp
-    image: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
+    image: ${GCC_IMAGE}
 
 clang:
     extends: .cpp
-    image: dunecommunity/dune-gdt-testing_clang:${CI_COMMIT_SHA}
+    image: ${CLANG_IMAGE}
 
 # ************ CLEANUP ************
 .cleanup:
