fixup! [ci] work around gitlab's variable expansion limitation

--- a/.ci/gitlab/ci.yml
+++ b/.ci/gitlab/ci.yml
@@ -1,15 +1,7 @@
-
 stages:
   - prepare
   - test
   - cleanup
-
-# due to gitlab's limited variable exapsnion we have to realize passing thse via YAML anchors
-.globals: &globalvariables
-    GCC_IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
-    GCC_IMAGE_HUB: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
-    CLANG_IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
-    CLANG_IMAGE_HUB: dunecommunity/dune-gdt-testing_clang:${CI_COMMIT_SHA}
 
 .docker-in-docker:
     image: docker:stable
@@ -29,8 +21,6 @@ stages:
 .image:
     extends: .docker-in-docker
     stage: prepare
-    variables:
-      <<: *globalvariables
     script:
       - docker build --build-arg BASE=${BASE} -t ${IMAGE} -f .ci/docker/Dockerfile .
       - docker push ${IMAGE}
@@ -39,13 +29,13 @@ gcc_image:
     extends: .image
     variables:
       BASE: dune-gdt-testing_base_gcc:master
-      IMAGE: ${GCC_IMAGE}
+      IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
 
 clang_image:
     extends: .image
     variables:
-        BASE: dune-gdt-testing_base_clang:master
-        IMAGE: ${CLANG_IMAGE}
+      BASE: dune-gdt-testing_base_clang:master
+      IMAGE: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
 
 # ************ TEST EXECUTION ************
 .cpp:
@@ -55,23 +45,23 @@ clang_image:
     script: /home/dune-ci/src/dune-gdt/.ci/drone/script.bash
     variables:
       MY_MODULE: dune-gdt
-      <<: *globalvariables
 
 gcc:
     extends: .cpp
-    image: ${GCC_IMAGE}
+    image: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
 
 clang:
     extends: .cpp
-    image: ${CLANG_IMAGE}
+    image: ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
 
 # ************ CLEANUP ************
 .cleanup:
     extends: .docker-in-docker
     stage: cleanup
     variables:
-        REPO_ID: 1
-        API: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/registry/repositories/${REPO_ID}"
+      APIBASE: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/registry/repositories/"
+      GCC_IMAGE_HUB: dunecommunity/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
+      CLANG_IMAGE_HUB: dunecommunity/dune-gdt-testing_clang:${CI_COMMIT_SHA}
     before_script:
       - echo $DOCKER_PW | docker login --username="$DOCKER_USER" --password-stdin
 
@@ -84,15 +74,15 @@ success:
 gcc_failure:
     extends: .cleanup
     script:
-      - docker pull ${GCC_IMAGE}
-      - docker tag ${GCC_IMAGE} ${GCC_IMAGE_HUB}
+      - docker pull ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA}
+      - docker tag ${CI_REGISTRY_IMAGE}/dune-gdt-testing_gcc:${CI_COMMIT_SHA} ${GCC_IMAGE_HUB}
       - docker push ${GCC_IMAGE_HUB}
     when: on_failure
 
 clang_failure:
     extends: .cleanup
     script:
-      - docker pull ${CLANG_IMAGE}
-      - docker tag ${CLANG_IMAGE} ${CLANG_IMAGE_HUB}
+      - docker pull ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA}
+      - docker tag ${CI_REGISTRY_IMAGE}/dune-gdt-testing_clang:${CI_COMMIT_SHA} ${CLANG_IMAGE_HUB}
       - docker push ${CLANG_IMAGE_HUB}
     when: on_failure
