[test] fix test setup

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -15,4 +15,21 @@ enable_testing()
 
 set(DXT_TEST_TIMEOUT 1000)
 
+add_subdir_tests(burgers)
+add_subdir_tests(discretefunction)
+add_subdir_tests(instationary-eocstudies)
+add_subdir_tests(integrands)
+add_subdir_tests(interpolations)
+add_subdir_tests(inviscid-compressible-flow)
+add_subdir_tests(linear-transport)
+add_subdir_tests(misc)
+add_subdir_tests(momentmodels)
+add_subdir_tests(operators)
+add_subdir_tests(projections)
+add_subdir_tests(prolongations)
+add_subdir_tests(spaces)
+add_subdir_tests(stationary-eocstudies)
+add_subdir_tests(stationary-heat-equation)
+add_subdir_tests(stokes)
+
 finalize_test_setup()
