make polorder 2 the default again

--- a/examples/activepolargels.ini
+++ b/examples/activepolargels.ini
@@ -6,17 +6,17 @@ manager=ug
 #cube=false
 min_level=2
 max_level=5
-NX=60
-NY=60
+NX=30
+NY=30
 # NZ=2
 
 [fem]
-degree=1
+degree=2
 torder=1
-t_end=10
+t_end=1
 #340.0
 # dt=1e-3
-dt=5e-3
+dt=1e-3
 superintegration_order=0
 phi_dirichlet_shift=1
 
@@ -40,14 +40,12 @@ c_1=5
 beta=0
 t_cut=1000
 Be=0.3
-Ca=0.1
+Ca=0.04255
+#Ca=0.1
 Pa=1.0
-#Be=3
-#Ca=1
-#Pa=0.1
 
 [output]
-filename=cpp_Be3Ca1Pa0.1_shift1_phinatscale1_dt5e-3polorder1
+filename=cpp_Be0.3Ca0.04255Pa1_cubegrid30_dt1e-3polorder2
 write_step=1e-2
 #write_step=-1
-subsampling=false
+subsampling=true
