[cellmodel] add preconditioner for pfield gmres solver

--- a/examples/activepolargels.ini
+++ b/examples/activepolargels.ini
@@ -1,24 +1,19 @@
 [grid]
 dim=2
 refinement=1
-#manager=yasp
-manager=ug
-#cube=false
 min_level=2
 max_level=5
-NX=30
-NY=30
+NX=120
+NY=120
 # NZ=2
 
 [fem]
-degree=2
+degree=1
 torder=1
 t_end=1
-#340.0
 # dt=1e-3
-dt=1e-3
+dt=1e-2
 superintegration_order=0
-phi_dirichlet_shift=1
 
 [problem]
 testcase=single_cell
@@ -40,12 +35,13 @@ c_1=5
 beta=0
 t_cut=1000
 Be=0.3
-Ca=0.04255
-#Ca=0.1
+#Ca=0.04255
+Ca=0.1
 Pa=1.0
 
 [output]
-filename=cpp_Be0.3Ca0.04255Pa1_cubegrid30_dt1e-3polorder2
-write_step=1e-2
+# filename=cpp_Be0.3Ca0.1Pa1_cubegrid90_dt1e-2polorder1_3dx
+filename=cpp_Be0.3Ca0.1Pa1_simplexgrid120_dt1e-2polorder1_3dx
+write_step=0.1
 #write_step=-1
-subsampling=true
+subsampling=false
