--- a/python/dune/gdt/CMakeLists.txt
+++ b/python/dune/gdt/CMakeLists.txt
@@ -28,6 +28,7 @@ dune_pybindxi_add_module(_local_functionals_intersection_interface EXCLUDE_FROM_
 dune_pybindxi_add_module(_local_integrands_advection EXCLUDE_FROM_ALL ${header} local/integrands/advection.cc)
 dune_pybindxi_add_module(_local_integrands_binary_element_interface EXCLUDE_FROM_ALL ${header} local/integrands/binary_element_interface.cc)
 dune_pybindxi_add_module(_local_integrands_element_product EXCLUDE_FROM_ALL ${header} local/integrands/element_product.cc)
+dune_pybindxi_add_module(_local_integrands_intersection_product EXCLUDE_FROM_ALL ${header} local/integrands/intersection_product.cc)
 dune_pybindxi_add_module(_local_integrands_laplace EXCLUDE_FROM_ALL ${header} local/integrands/laplace.cc)
 dune_pybindxi_add_module(_local_integrands_unary_element_interface EXCLUDE_FROM_ALL ${header} local/integrands/unary_element_interface.cc)
 dune_pybindxi_add_module(_operators_interfaces_common EXCLUDE_FROM_ALL ${header} operators/interfaces_common.cc)
